MediaQuery fixes, padding changes, link styling, text alignment, <p> element removal, header class

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -59,6 +59,10 @@ p {
     color: black;
 }
 
+p a {
+    color: blue;
+}
+
 figure{
     display: flex;
     flex-direction: column;
@@ -88,6 +92,7 @@ h1 {
     display: flex;
     justify-content: center;
     color: white;
+    text-align: center;
 }
 
 h2 {
@@ -157,6 +162,7 @@ ul li {
 
 }
 
+
 li a {
     padding:30px;
     padding-bottom: 15px;
@@ -168,7 +174,11 @@ li a {
 ol li{
     background: white;
     color: black;
-    padding-left: 0px;
+    padding: 0px;
+}
+
+ol {
+    padding: 0px;
 }
 /* ////////////////////////////// */
 /* ////////////////////////////// */
@@ -253,8 +263,8 @@ img {
         flex-direction:column;
     }
     li a {
-        padding-left: 150px;
-        padding-right: 150px;
+        padding-left: 80px;
+        padding-right: 80px;
         padding-top: 15px;
         padding-bottom: 15px;
 
@@ -269,3 +279,10 @@ img {
         width: 100%;
     }
   }
+
+  @media screen and (max-width: 460px) {
+    .header-column-flex{
+        flex-direction: column;
+        align-items: center;
+    }
+}
